# Mopraria

./: CMakeLists.txt  CMakePresets.json  README.txt  rebuild.bat  rebuild_and_start.bat
src/: main.cpp
src/Components/: BlackStone.cpp  BlackStone.hpp  Block.cpp  Block.hpp  Renderable.cpp  Renderable.hpp  Textures.cpp  Textures.hpp  constants.cpp  constants.hpp  types.hpp
src/Engine/Animation/: Animation.cpp  Animation.hpp
src/Engine/AssetsManager/: AssetsManager.cpp  AssetsManager.hpp
src/Engine/Camera/: Camera.cpp  Camera.hpp
src/Engine/Components/Sprite/: Sprite.cpp  Sprite.hpp
src/Engine/Components/Transform/: Transform.cpp  Transform.hpp
src/Engine/Engine/: Engine.cpp  Engine.hpp
src/Engine/Entity/: Entity.cpp  Entity.hpp
src/Engine/Input/: Input.cpp  Input.hpp
src/Engine/Scene/: Scene.cpp  Scene.hpp
src/Engine/Window/: Window.cpp  Window.hpp
src/Game/: main.cpp
src/Game/Constants/: constants.cpp  constants.hpp
src/Textures/: metadata.json
